--- a/TaeHyoung/money_manager/package.json
+++ b/TaeHyoung/money_manager/package.json
@@ -2,7 +2,7 @@
   "name": "money_manager",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +11,8 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "mongoose": "^5.0.10"
+    "mongoose": "^5.0.10",
+    "multer": "^1.3.0",
+    "nodemon": "^1.17.2"
   }
 }
