--- a/SeWoong/Money-Manager/package.json
+++ b/SeWoong/Money-Manager/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
-    "mongoose": "^5.0.11"
+    "mongoose": "^5.0.11",
+    "multer": "^1.3.0",
+    "npm": "^5.8.0"
   }
 }
