--- a/TaeHyoung/react-native-money-manager/package.json
+++ b/TaeHyoung/react-native-money-manager/package.json
@@ -2,12 +2,14 @@
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "dependencies": {
+    "apsl-react-native-button": "^3.1.0",
+    "babel": "^6.23.0",
     "expo": "^26.0.0",
-    "native-base": "^2.4.1",
+    "native-base": "^2.4.2",
     "react": "16.3.0-alpha.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
-    "react-native-router-flux": "^4.0.0-beta.28",
+    "react-native-router-flux": "^4.0.0-beta.30",
     "react-number-format": "^3.3.0"
   }
 }
