--- a/TaeHyoung/rn-money-manager/package.json
+++ b/TaeHyoung/rn-money-manager/package.json
@@ -2,8 +2,21 @@
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "dependencies": {
+    "apsl-react-native-button": "^3.1.0",
     "expo": "^26.0.0",
+    "native-base": "^2.4.2",
     "react": "16.3.0-alpha.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz"
-  }
+    "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
+    "react-native-material-design": "^0.3.7",
+    "react-native-router-flux": "^4.0.0-beta.28"
+  },
+  "name": "rn-money-manager",
+  "version": "1.0.0",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
