--- a/TaeHyoung/rn-money-manager/package.json
+++ b/TaeHyoung/rn-money-manager/package.json
@@ -5,10 +5,16 @@
     "apsl-react-native-button": "^3.1.0",
     "expo": "^26.0.0",
     "native-base": "^2.4.2",
-    "react": "16.3.0-alpha.1",
+    "react": "^16.3.0-alpha.1",
+    "react-month-picker": "^1.3.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
+    "react-native-custom-datepicker-ios": "0.0.5",
+    "react-native-datepicker": "^1.7.1",
     "react-native-material-design": "^0.3.7",
-    "react-native-router-flux": "^4.0.0-beta.28"
+    "react-native-month-selector": "^1.1.0",
+    "react-native-router-flux": "^4.0.0-beta.28",
+    "react-native-wheel-datepicker": "^2.2.3",
+    "react-simple-month-picker": "^0.2.3"
   },
   "name": "rn-money-manager",
   "version": "1.0.0",
