--- a/TaeHyoung/rn-money-manager/package.json
+++ b/TaeHyoung/rn-money-manager/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "apsl-react-native-button": "^3.1.0",
     "expo": "^26.0.0",
+    "lottie-react-native": "^2.5.0",
     "native-base": "^2.4.2",
     "react": "^16.3.0-alpha.1",
     "react-month-picker": "^1.3.5",
