--- a/TaeHyoung/rn-money-manager/app.json
+++ b/TaeHyoung/rn-money-manager/app.json
@@ -5,7 +5,10 @@
     "slug": "rn-money-manager",
     "privacy": "public",
     "sdkVersion": "26.0.0",
-    "platforms": ["ios", "android"],
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
