--- a/TaeJoon/money_manager/Android/app/build.gradle
+++ b/TaeJoon/money_manager/Android/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.google.code.gson:gson:2.3.1'
     implementation 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
+    implementation 'com.android.support:design:27.1.1'
 }
